add 3 new list to data1 file
 on another-data branch

--- a/data1.html
+++ b/data1.html
@@ -14,5 +14,11 @@
         <li>data 3</li>
     </ul>
     
+     <ul>
+        <li>data 4</li>
+        <li>data 5</li>
+        <li>data 6</li>
+    </ul>
+    
 </body>
 </html>
